* Close all tabs before opening new ZIM file, avoid weird situations (ID: 3372140)
* Fixed tabs behavior
* FullScreen support for Tabs
* Revamped Tabs UI on Linux, OSX and Windows
* Introduce/Improve keyboard shortcuts behaviour for a better scrolling experience (ID: 3389521)
* Fixed problem with not working content manager on Windows installed instances of Kiwix (ID: 3385476)

Kiwix 0.9 beta1
* Remove a hard coded path in kiwix-compact.sh (ID: 3135956)
* Avoid the flickering during mouseover links after canceling the indexing
* Under Windows, installer adds now shortcuts to all users
* Force loading no plugin to avoid any problem (with libmoon for example)
* Under Windows, the displayed (disk) "space required" value is now correct in the installer
* kiwix-index backend argument is now an option and set as "xapian" per default
* Fix regressions responsible for lower case titles in result list (ID: 3147594)
* Implement the HTTP 404 error in kiwix-serve
* Fix a small bug in the indexing code to avoid forgetting around 100 articles per ZIM file
* Disable DNS prefetching for external links
* New locales: Polish, Dutch
* Open a ZIM file directly from the command line
* Gnome and KDE integration: mime-type recognition + icon & application associations (ZIM double-click feature)
* New checksum checker to be able to check ZIM file integrity
* A list of ZIM files to download is dynamicaly downloaded in the help page if user online (ID: 3165272)
* Simplification and improvment of the searchbar (no search button anymore, always available, standardized, ...)
* New Find-in-text bar (like in firefox, at the bottom), to replace the dialogbox.
* Result sidebar removed and replaced by a result web page "a la google"
* Usage of jar files for a quicker startup
* Kiwix for Mac OSX
* kiwix-serve CPU usage improvement (ID: 3213104)
* Update the Window title by switching the tabs
* New integrated content manager/downloader
* Introduction of Desktop notifications (ID: 3315162)